--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "aos": "^2.3.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-icons": "^3.3.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2",
     "react-select": "^2.2.0",
