--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2",
     "react-select": "^2.2.0",
+    "react-tabs": "^3.0.0",
     "styled-components": "^4.1.3"
   },
   "scripts": {
