--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lazy": "git commit -am 'update' && git push && firebase deploy"
   },
   "eslintConfig": {
     "extends": "react-app"
